<resources>
    <string name="app_name">sopt29</string>
    <string name="sign_up_kor">회원가입</string>
    <string name="login">로그인</string>
    <string name="input_pw">비밀번호를 입력해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="input_id">아이디를 입력해주세요.</string>
    <string name="id">아이디</string>
    <string name="input_githubid">깃허브 아이디를 입력해주세요.</string>
    <string name="githubid">깃허브 아이디</string>
    <string name="SOPTHub">SOPTHub</string>
    <string name="user_name">이름</string>
    <string name="input_name">이름을 입력해주세요.</string>
    <string name="my_name">한진희</string>
    <string name="age">나이</string>
    <string name="mbti">MBTI</string>
    <string name="my_mbti">ISTP</string>
    <string name="my_age">24</string>
    <string name="introduce">나는야 한진희</string>
    <string name="scroll_introduce">여기만 스크롤 됨 ! \n 진희에요 \n I\'m jinhee \n hello world ! \n 우하하 \n we sopt \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n android \n</string>
    <string name="text_follower_list">팔로워 목록</string>
    <string name="text_repo_list">레포지토리 목록</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_info">계정이 없으신가요?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_camera">Camera</string>
    <string name="title_home_kor">홈</string>
    <string name="title_profile_kor">프로필</string>
    <string name="title_camera_kor">카메라</string>
    <string name="my_name_eng">Han Jinhee</string>
    <string name="my_githubid">HJinhee</string>
    <string name="GitHub">Github</string>
</resources>