<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tv_sopthub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/SOPTHub"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cl_home_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_home_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sopthub">

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:background="@drawable/background_edittext_r15_yellow"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_name"
            app:layout_constraintBottom_toTopOf="@id/tv_home_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_img" />

        <TextView
            android:id="@+id/tv_home_my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/my_name"
            app:layout_constraintStart_toEndOf="@id/tv_home_name"
            app:layout_constraintTop_toBottomOf="@+id/iv_img"
            app:layout_constraintTop_toTopOf="@id/tv_home_name" />

        <TextView
            android:id="@+id/tv_home_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_home_mbti"
            app:layout_constraintStart_toStartOf="@id/tv_home_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_name" />

        <TextView
            android:id="@+id/tv_home_my_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_age"
            app:layout_constraintStart_toStartOf="@id/tv_home_my_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_my_name"
            app:layout_constraintTop_toTopOf="@id/tv_home_age" />


        <TextView
            android:id="@+id/tv_home_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mbti"
            app:layout_constraintStart_toStartOf="@id/tv_home_name"
            app:layout_constraintTop_toBottomOf="@id/tv_home_age" />

        <TextView
            android:id="@+id/tv_home_my_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_mbti"
            app:layout_constraintStart_toStartOf="@id/tv_home_my_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_my_age"
            app:layout_constraintTop_toTopOf="@id/tv_home_mbti" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_go_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jinhee\nGitHub"
            android:background="@drawable/background_edittext_r15_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_img"
            app:layout_constraintBottom_toBottomOf="@id/iv_img"
            />
        <TextView
            android:id="@+id/tv_home_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:textAlignment="center"
            android:text="@string/introduce"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_mbti"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_follower_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_repo_list"
            android:text="@string/text_follower_list"
            android:textColor="@color/white"
            android:background="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_repo_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_follower_list"
            android:text="@string/text_repo_list"
            android:textColor="@color/black"
            android:background="@color/white"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_home_rcv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>