<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ImageView
        android:id="@+id/img_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_login_id"
        android:src="@drawable/img_github"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/tv_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/githubid"
            android:textStyle="bold"
            android:textSize="14sp"
            android:fontFamily="@font/noto_sans_kr_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_githubid"
            android:inputType="text"
            android:textSize="14sp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:background="@drawable/selector_et_focus_r5"
            app:layout_constraintStart_toStartOf="@id/tv_login_id"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_id" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_login_id"
        app:layout_constraintBottom_toTopOf="@id/guideline_signin">

        <TextView
            android:id="@+id/tv_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/noto_sans_kr_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pw"
            android:inputType="textPassword"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:textSize="14sp"
            android:background="@drawable/selector_et_focus_r5"
            app:layout_constraintStart_toStartOf="@id/tv_login_pw"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_pw" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:background="@drawable/background_btn_r5_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        >
        <TextView
            android:id="@+id/tv_sign_up_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_info"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:textColor="@color/dark_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_sign_up"
            />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_kor"
            android:textColor="@color/dark_gray"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_sign_up_info"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>