<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_kor"
        android:textSize="25sp"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:layout_marginTop="55dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up">

            <TextView
                android:id="@+id/tv_signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="14sp"
                android:fontFamily="@font/noto_sans_kr_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:textSize="14sp"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:background="@drawable/selector_et_focus_r5"
                app:layout_constraintStart_toStartOf="@+id/tv_signup_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_signup_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_signup_name">

            <TextView
                android:id="@+id/tv_signup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/githubid"
                android:textSize="14sp"
                android:fontFamily="@font/noto_sans_kr_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_signup_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_githubid"
                android:textSize="14sp"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:background="@drawable/selector_et_focus_r5"
                app:layout_constraintStart_toStartOf="@+id/tv_signup_id"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup_id" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_signup_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_signup_id">

            <TextView
                android:id="@+id/tv_signup_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="14sp"
                android:fontFamily="@font/noto_sans_kr_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_signup_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pw"
                android:textSize="14sp"
                android:fontFamily="@font/noto_sans_kr_regular"
                android:inputType="textPassword"
                android:background="@drawable/selector_et_focus_r5"
                app:layout_constraintStart_toStartOf="@+id/tv_signup_pw"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup_pw" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/background_btn_r5_pink"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:text="@string/sign_up_kor"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>