<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bubblegum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:id="@+id/img_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_icon_setting_2_white"
            />

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/group_814"
            />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/my_name_eng"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_profile"
            />
        <TextView
            android:id="@+id/tv_profile_githubid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/my_githubid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="15dp"
            android:background="@color/white"
            android:layout_marginEnd="3dp"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_githubid"
            app:layout_constraintEnd_toStartOf="@id/tv_profile_info"
            app:layout_constraintTop_toTopOf="@id/tv_profile_info"
            app:layout_constraintBottom_toBottomOf="@id/tv_profile_info"
            >
        </View>
        <TextView
            android:id="@+id/tv_profile_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/introduce"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_githubid"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_follower_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_profile_top_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_repo_list"
        android:layout_marginStart="10dp"
        android:text="@string/text_follower_list"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:background="@drawable/selector_btn_butter_r5"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_repo_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_profile_top_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_follower_list"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text_repo_list"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:background="@drawable/selector_btn_butter_r5"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_home_rcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_repo_list" />
</androidx.constraintlayout.widget.ConstraintLayout>